EXTRA_DIST = \
Application27_BIOS.mof \
Application27_CheckAction.mof \
Application27_DeploymentModel.mof \
Application27_General.mof \
Application27_InstalledProduct.mof \
Application27_SystemSoftware.mof \
CIM_Application27.mof \
CIM_Core27.mof \
CIM_Database27.mof \
CIM_Device27.mof \
CIM_Event27.mof \
CIM_Interop27.mof \
CIM_Metrics27.mof \
CIM_Network27.mof \
CIM_Physical27.mof \
CIM_Policy27.mof \
CIM_Schema27.mof \
CIM_Support27.mof \
CIM_System27.mof \
CIM_User27.mof \
Core27_Capabilities.mof \
Core27_Collection.mof \
Core27_Collections.mof \
Core27_CoreElements.mof \
Core27_Device.mof \
Core27_MethodParms.mof \
Core27_Physical.mof \
Core27_PowerMgmt.mof \
Core27_ProductFRU.mof \
Core27_Qualifiers.mof \
Core27_Redundancy.mof \
Core27_Settings.mof \
Core27_Software.mof \
Core27_Statistics.mof \
Core27_StorageExtent.mof \
Device27_Controller.mof \
Device27_CoolingAndPower.mof \
Device27_CoolPower.mof \
Device27_DeviceElements.mof \
Device27_DiskGroup.mof \
Device27_FC.mof \
Device27_IB.mof \
Device27_Memory.mof \
Device27_Modems.mof \
Device27_NetworkAdapter.mof \
Device27_Ports.mof \
Device27_Printing.mof \
Device27_Processor.mof \
Device27_SccExtents.mof \
Device27_Sensors.mof \
Device27_StorageDevices.mof \
Device27_StorageExtents.mof \
Device27_StorageLib.mof \
Device27_StorageServices.mof \
Device27_USB.mof \
Device27_UserDevices.mof \
Metrics27_BaseMetric.mof \
Metrics27_UnitofWork2.mof \
Metrics27_UnitOfWork.mof \
Network27_BGP.mof \
Network27_Buffers.mof \
Network27_Collections.mof \
Network27_Filtering.mof \
Network27_MPLS.mof \
Network27_OSPF.mof \
Network27_Pipes.mof \
Network27_ProtocolEndpoints.mof \
Network27_QoS.mof \
Network27_Routes.mof \
Network27_RoutingForwarding.mof \
Network27_SNMP.mof \
Network27_SwitchingBridging.mof \
Network27_Systems.mof \
Network27_VLAN.mof \
Physical27_Component.mof \
Physical27_Connector.mof \
Physical27_Link.mof \
Physical27_Misc.mof \
Physical27_Package.mof \
Physical27_PhysicalMedia.mof \
Physical27_StoragePackage.mof \
System27_Boot.mof \
System27_Diagnostics.mof \
System27_FileElements.mof \
System27_Logs.mof \
System27_OperatingSystem.mof \
System27_Processing.mof \
System27_SystemElements.mof \
System27_SystemResources.mof \
System27_SystemSoftware.mof \
System27_Time.mof \
System27_Unix.mof \
User27_AccessControl.mof \
User27_Account.mof \
User27_AuthenticationReqmt.mof \
User27_Credential.mof \
User27_Group.mof \
User27_Kerberos.mof \
User27_Org.mof \
User27_PublicKey.mof \
User27_Role.mof \
User27_SecurityServices.mof \
User27_SharedSecret.mof \
User27_UsersAccess.mof

